syntax = "proto3";
package peggy.v1;

import "peggy/v1/attestation.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
// import "peggy/v1/types.proto";

option go_package = "github.com/althea-net/peggy/module/x/peggy/types";

// OutgoingTxBatch represents a batch of transactions going from Peggy to ETH
message OutgoingTxBatch {
  uint64 batch_nonce = 1;
  repeated OutgoingTransferTx transactions = 2;
  string token_contract = 3;
}

// OutgoingTransferTx represents an individual send from Peggy to ETH
message OutgoingTransferTx {
  uint64 id = 1;
  string sender = 2;
  string dest_address = 3;
  ERC20Token erc20_token = 4;
  cosmos.base.v1beta1.Coin fee = 5 [(gogoproto.nullable) = false];
}
